Fix details section on safari

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -144,3 +144,12 @@ details {
 details > :not([hidden]) ~ :not([hidden]) {
   @apply m-0;
 }
+
+details > summary {
+  list-style: none;
+}
+
+details > summary::marker,
+details > summary::-webkit-details-marker {
+  display: none;
+}
